# submissions-checker

./: .env.e2e  .gitignore  Makefile  README.md  alembic.ini  docker-compose.e2e.yml  docker-compose.yml  pyproject.toml  pytest-e2e.ini
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_dummy_data.py  0003_add_users_and_auth.py  0004_student_registration.py  0005_add_analytics_indexes.py  0006_add_quiz_system.py  0007_quiz_dummy_data.py  0008_multi_quiz_attempts.py  0009_quiz_violations.py  0010_submission_checker_flow.py  0011_features_batch.py  0012_add_plugin_system.py  0013_remove_quiz_tables.py  0014_add_file_assets.py  0015_add_notification_preferences.py  0016_add_semesters.py  0017_add_feedback_tables.py  0018_subject_owner_status_zip_data.py  0019_test_student.py
docker/app/: Dockerfile
docker/localstack/init/: 01_create_bucket.sh
docs/: PLUGIN_AUTHORING.md  analytics.md  anti-cheat.md  student-registration.md
i18n/: uk.yml
openspec/changes/gather-feedbacks/: design.md  proposal.md  tasks.md
openspec/changes/multilanguage-i18n-support/: design.md  proposal.md  tasks.md
openspec/changes/student-notifications/: design.md  proposal.md  tasks.md
openspec/changes/test-mode-for-teacher/: design.md  proposal.md  tasks.md
openspec/specs/assignment-checking/: spec.md
openspec/specs/auth-security/: spec.md
scripts/: quiz_form.gs
src/submissions_checker/: main.py
templates/: admin_audit.html  admin_create_teacher.html  admin_dashboard.html  admin_users.html  analytics_dashboard.html  analytics_fraud.html  analytics_student.html  assignment_detail.html  assignments.html  base.html  feedback_already_submitted.html  feedback_form.html  feedback_not_found.html  feedback_thank_you.html  forgot_password.html  login.html  notifications.html  reset_password.html  student_notification_preferences.html  student_quiz.html  student_quiz_result.html  student_select.html  student_summary.html  subjects.html  teacher_add_student.html  teacher_assignment.html  teacher_assignment_form.html  teacher_dashboard.html  teacher_feedback_view.html  teacher_quiz_editor.html  teacher_students.html  teacher_subject.html  teacher_subject_form.html  teacher_submission_review.html
tests/e2e/: conftest.py  helpers.py  test_analytics.py  test_feedback.py  test_notifications.py  test_quiz.py  test_student_auth.py  test_student_enrollment.py  test_student_submission.py  test_subject_management.py  test_teacher_auth.py
(+121 files in other folders)
